# StrawPoll

./: .gitattributes  CMakeLists.txt  README.md  build.sh
client/: README.md
client/src/: App.js
src/: server.cpp
strawpoll/: strawpoll.fbs  strawpoll.hpp
